--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "version": "0.0.1",
-  "name": "99-SMG",
+  "name": "99_SMG",
   "description": "A web app based on the SMG game API",
   "devDependencies": {
     "jasmine-core": "^2.2.0",
