--- a/package.json
+++ b/package.json
@@ -2,11 +2,22 @@
   "version": "0.0.1",
   "name": "99_SMG",
   "description": "A web app based on the SMG game API",
+  "dependencies": {
+    "http-server": "~0.7.5",
+    "jasmine-core": "~2.1.0",
+    "karma": "~0.12.31",
+    "karma-chrome-launcher": "~0.1.7",
+    "karma-coverage": "~0.2.7",
+    "karma-jasmine": "~0.2.2",
+    "protractor": "~1.7.0"
+  },
   "devDependencies": {
-    "jasmine-core": "^2.2.0",
-    "karma": "^0.12.31",
-    "karma-chrome-launcher": "^0.1.7",
-    "karma-coverage": "^0.2.7",
-    "karma-jasmine": "^0.2.2"
+    "grunt": "~0.4.5",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-sass": "^0.9.2",
+    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "load-grunt-tasks": "~3.1.0"
   }
 }
